--- a/index.html
+++ b/index.html
@@ -3,78 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Apple Devices, техника Apple, Авито Айфоны">
     <title>Apple Devices</title>
     <link rel="stylesheet" href="css/outlines.css">
 </head>
 <body>
-<header>
-    <nav>
-        <ul>
-            <li>Кто мы такие</li>
-            <li>Наши преимущества</li>
-            <li>Контакты</li>
-            <li>Отзывы покупателей</li>
-        </ul>
-    </nav>
+<header class="header">
+    <div class="header__container">
+        <nav class="header__nav">
+            <ul class="header__list">
+                <li class="header__item">Кто мы такие</li>
+                <li class="header__item">Наши преимущества</li>
+                <li class="header__item">Контакты</li>
+                <li class="header__item">Отзывы покупателей</li>
+            </ul>
+        </nav>
+        <h1 class="header__title">Apple Devices</h1>
+    </div>
 </header>
 <main>
-    <h1>Apple Devices</h1>
-    <section>
-        <h2>Кто мы такие?</h2>
-        <p>Apple Devices - это магазин техники Apple, предоставляющий премиальное обслуживание клиентов, оставляя при этом самую низкиую цену на рынке.</p>
+    <section class="main__block">
+        <h2 class="main__block__title">Кто мы такие?</h2>
+        <p class="main__block__text">Apple Devices - это магазин техники Apple, предоставляющий премиальное обслуживание клиентов, оставляя при этом самую низкиую цену на рынке.</p>
     </section>
-    <section>
-        <h2>Наши преимущества</h2>
-        <ol>
-            <li>Низкие цены</li>
-            <li>Гарантия на все устройства</li>
-            <li> Гибкие условия оплаты
-                <ul>
-                    <li>Кредит / рассрочка</li>
-                    <li>Trade-In</li>
+    <section class="main__block">
+        <h2 class="main__block__title">Наши преимущества</h2>
+        <ol class="main__block__list">
+            <li class="main__block__item">Низкие цены</li>
+            <li class="main__block__item">Гарантия на все устройства</li>
+            <li class="main__block__item"> Гибкие условия оплаты
+                <ul class="main__block__list">
+                    <li class="main__block__item">Кредит / Рассрочка</li>
+                    <li class="main__block__item">Trade-In</li>
                 </ul>
             </li>
         </ol>
     </section>
-    <section>
-        <h2>Контакты</h2>
-        <h3>г. Екатеринбург</h3>
-        <ol>
-            <li><strong>Адрес Офиса:</strong> г. Екатеринбург, ул. Народной Воли 62Б, 2 этаж, офис 209</li>
-            <li><strong>Контакт Telegram:</strong> <a href="https://t.me/appledevicesEkb">@appledevicesEkb</a></li>
-            <li><strong>Номер телефона:</strong> +79126621411</li>
-            <img src="/images/AD_ekb.jpg" alt="Фото офиса в Екатеринбургв" width="20%">
+    <section class="main__block">
+        <h2 class="main__block__title">Контакты</h2>
+        <h3 class="main__block__city">г. Екатеринбург</h3>
+        <ol class="main__block__list">
+            <li class="main__block__item"><strong>Адрес Офиса:</strong> г. Екатеринбург, ул. Народной Воли 62Б, 2 этаж, офис 209</li>
+            <li class="main__block__item"><strong>Контакт Telegram:</strong> <a class="main__block__link" href="https://t.me/appledevicesEkb">@appledevicesEkb</a></li>
+            <li class="main__block__item"><strong>Номер телефона:</strong> +79126621411</li>
         </ol>
-        <h3>г. Пермь</h3>
-        <ol>
-            <li><strong>Адрес Офиса:</strong> г. Пермь, ул. Пермская 33, БЦ "Барвиха", 2 этаж, офис 202.4</li>
-            <li><strong>Контакт Telegram:</strong> <a href="https://t.me/appledevicesPerm">@appledevicesPerm</a></li>
-            <li><strong>Номер телефона:</strong> +79125521431</li>
-            <img src="/images/AD_perm.jpg" alt="Фото офиса в Перми" width="20%">
+        <img class="main__block__img"  src="/images/AD_ekb.jpg" alt="Фото офиса в Екатеринбурге">
+        <h3 class="main__block__city">г. Пермь</h3>
+        <ol class="main__block__list">
+            <li class="main__block__item"><strong>Адрес Офиса:</strong> г. Пермь, ул. Пермская 33, БЦ "Барвиха", 2 этаж, офис 202.4</li>
+            <li class="main__block__item"><strong>Контакт Telegram:</strong> <a class="main__block__link" href="https://t.me/appledevicesPerm">@appledevicesPerm</a></li>
+            <li class="main__block__item"><strong>Номер телефона:</strong> +79125521431</li>
         </ol>
+        <img class="main__block__img" src="/images/AD_perm.jpg" alt="Фото офиса в Перми">
     </section>
-    <section>
-        <h2>Отзывы покупателей</h2>
-        <blockquote>
-            Покупал iPhone 15 Pro Max в Apple Devices. Спасибо Ярославу за консультацию и помощь с выбором.
-            <br>Заодно сдал свой старый iPhone 13 в трейдин и получил хорошую скидку на новое устройство. Жене телефон
-            буду покупать тут)
-            <cite>- Александр Марков</cite>
-        </blockquote>
-        <blockquote>
-            Заехал к пацанятам взять рабочий сотик в командировку, ну чтобы с кайфом было, а не хухры мухры.
-            <br>Сеня реально наш пермский слон, помог выбрать мобилу понтовую и чехол в подарок дал блатненый. От души, братва
-            <cite>- Сергей Обороин</cite>
-        </blockquote>
+    <section class="main__block">
+        <h2 class="main__block__title">Отзывы покупателей</h2>
+        <section class="reviews">
+            <blockquote class="review">
+                <p class="review__text">Покупал iPhone 15 Pro Max в Apple Devices. Спасибо Ярославу за консультацию и помощь с выбором.
+                    <br>Заодно сдал свой старый iPhone 13 в трейд-ин и получил хорошую скидку на новое устройство. Жене телефон
+                    буду покупать тут)</p>
+                <footer class="review__author">— Александр Марков</footer>
+            </blockquote>
+            <blockquote class="review">
+                <p class="review__text">Заехал к пацанятам взять рабочий сотик в командировку, ну чтобы с кайфом было, а не хухры мухры.
+                    <br>Сеня реально наш пермский слон, помог выбрать мобилу понтовую и чехол в подарок дал блатненый. От души, братва</p>
+                <footer class="review__author">— Сергей Оборин</footer>
+            </blockquote>
+        </section>
+
         <aside>
-            Вы также можете оставить свой отзыв после покупки на нашем <a href="https://avito.ru">Avito</a>, спасибо за обратную связь!
+            Вы также можете оставить свой отзыв после покупки на нашем <a class="main__block__link" href="https://avito.ru">Avito</a>, спасибо за обратную связь!
         </aside>
     </section>
-    <section>
-        <h4>Бонус для внимательных</h4>
-        <article>Для особо внимательных клиентов, дарим промокод <span><em>Frontend</em></span>, который даст вам скидку 1000 руб. при покупке телефона</article>
+    <section class="main__block">
+        <h4 class="main__block__title">Бонус для внимательных</h4>
+        <article class="main__block__text">Для особо внимательных клиентов, дарим промокод <span><em><strong>Frontend</strong></em></span>, который даст вам скидку 1000 руб. при покупке телефона</article>
     </section>
 </main>
-<footer><h5>ИП Демидович Т. А. ОРГНИП 324665800153826</h5></footer>
+<footer><h5 class="footer__text">ИП Демидович Т. А. ОРГНИП 324665800153826</h5></footer>
 </body>
 </html>
