add: @media screen css added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </blockquote>
         </section>
 
-        <aside>
+        <aside class="main__block__text">
             Вы также можете оставить свой отзыв после покупки на нашем <a class="main__block__link" href="https://avito.ru">Avito</a>, спасибо за обратную связь!
         </aside>
     </section>
