add: add grid table

--- a/index.html
+++ b/index.html
@@ -40,6 +40,34 @@
         </ol>
     </section>
     <section class="main__block">
+        <h2 class="main__block__title">Наличие Товаров</h2>
+        <div class="table-container">
+            <div class="table">
+                <div class="table__row table__header">
+                    <div class="table__cell">Модель</div>
+                    <div class="table__cell">Цвет и Память</div>
+                    <div class="table__cell">Цена</div>
+                </div>
+                <div class="table__row">
+                    <div class="table__cell">iPhone 15</div>
+                    <div class="table__cell">Black 256GB</div>
+                    <div class="table__cell">79 990 руб.</div>
+                </div>
+                <div class="table__row">
+                    <div class="table__cell">iPhone 15 Pro</div>
+                    <div class="table__cell">Natural Titanium 1TB</div>
+                    <div class="table__cell">169 990 руб.</div>
+                </div>
+                <div class="table__row">
+                    <div class="table__cell">iPhone 15 Pro Max</div>
+                    <div class="table__cell">White Titanium 512GB</div>
+                    <div class="table__cell">129 990 руб.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="main__block">
         <h2 class="main__block__title">Контакты</h2>
         <h3 class="main__block__city">г. Екатеринбург</h3>
         <ol class="main__block__list">
