fix: lab-3 fixes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="Техника Apple">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Apple Devices, техника Apple, Авито Айфоны">
     <title>Apple Devices</title>
@@ -23,24 +24,24 @@
 </header>
 <main>
     <section class="main__block">
-        <h2 class="main__block__title">Кто мы такие?</h2>
-        <p class="main__block__text">Apple Devices - это магазин техники Apple, предоставляющий премиальное обслуживание клиентов, оставляя при этом самую низкиую цену на рынке.</p>
+        <h2 class="block__title">Кто мы такие?</h2>
+        <p class="block__text">Apple Devices - это магазин техники Apple, предоставляющий премиальное обслуживание клиентов, оставляя при этом самую низкиую цену на рынке.</p>
     </section>
     <section class="main__block">
-        <h2 class="main__block__title">Наши преимущества</h2>
-        <ol class="main__block__list">
-            <li class="main__block__item">Низкие цены</li>
-            <li class="main__block__item">Гарантия на все устройства</li>
-            <li class="main__block__item"> Гибкие условия оплаты
-                <ul class="main__block__list">
-                    <li class="main__block__item">Кредит / Рассрочка</li>
-                    <li class="main__block__item">Trade-In</li>
+        <h2 class="block__title">Наши преимущества</h2>
+        <ol class="block__list">
+            <li class="block__item">Низкие цены</li>
+            <li class="block__item">Гарантия на все устройства</li>
+            <li class="block__item"> Гибкие условия оплаты
+                <ul class="block__list">
+                    <li class="block__item">Кредит / Рассрочка</li>
+                    <li class="block__item">Trade-In</li>
                 </ul>
             </li>
         </ol>
     </section>
     <section class="main__block">
-        <h2 class="main__block__title">Наличие Товаров</h2>
+        <h2 class="block__title">Наличие Товаров</h2>
         <div class="table-container">
             <div class="table">
                 <div class="table__row table__header">
@@ -68,24 +69,24 @@
     </section>
 
     <section class="main__block">
-        <h2 class="main__block__title">Контакты</h2>
-        <h3 class="main__block__city">г. Екатеринбург</h3>
-        <ol class="main__block__list">
-            <li class="main__block__item"><strong>Адрес Офиса:</strong> г. Екатеринбург, ул. Народной Воли 62Б, 2 этаж, офис 209</li>
-            <li class="main__block__item"><strong>Контакт Telegram:</strong> <a class="main__block__link" href="https://t.me/appledevicesEkb">@appledevicesEkb</a></li>
-            <li class="main__block__item"><strong>Номер телефона:</strong> +79126621411</li>
+        <h2 class="block__title">Контакты</h2>
+        <h3 class="block__city">г. Екатеринбург</h3>
+        <ol class="block__list">
+            <li class="block__item"><strong>Адрес Офиса:</strong> г. Екатеринбург, ул. Народной Воли 62Б, 2 этаж, офис 209</li>
+            <li class="block__item"><strong>Контакт Telegram:</strong> <a class="block__link" href="https://t.me/appledevicesEkb">@appledevicesEkb</a></li>
+            <li class="block__item"><strong>Номер телефона:</strong> +79126621411</li>
         </ol>
-        <img class="main__block__img"  src="/images/AD_ekb.jpg" alt="Фото офиса в Екатеринбурге">
-        <h3 class="main__block__city">г. Пермь</h3>
-        <ol class="main__block__list">
-            <li class="main__block__item"><strong>Адрес Офиса:</strong> г. Пермь, ул. Пермская 33, БЦ "Барвиха", 2 этаж, офис 202.4</li>
-            <li class="main__block__item"><strong>Контакт Telegram:</strong> <a class="main__block__link" href="https://t.me/appledevicesPerm">@appledevicesPerm</a></li>
-            <li class="main__block__item"><strong>Номер телефона:</strong> +79125521431</li>
+        <img class="block__img"  src="/images/AD_ekb.jpg" alt="Фото офиса в Екатеринбурге">
+        <h3 class="block__city">г. Пермь</h3>
+        <ol class="block__list">
+            <li class="block__item"><strong>Адрес Офиса:</strong> г. Пермь, ул. Пермская 33, БЦ "Барвиха", 2 этаж, офис 202.4</li>
+            <li class="block__item"><strong>Контакт Telegram:</strong> <a class="block__link" href="https://t.me/appledevicesPerm">@appledevicesPerm</a></li>
+            <li class="block__item"><strong>Номер телефона:</strong> +79125521431</li>
         </ol>
-        <img class="main__block__img" src="/images/AD_perm.jpg" alt="Фото офиса в Перми">
+        <img class="block__img" src="/images/AD_perm.jpg" alt="Фото офиса в Перми">
     </section>
     <section class="main__block">
-        <h2 class="main__block__title">Отзывы покупателей</h2>
+        <h2 class="block__title">Отзывы покупателей</h2>
         <section class="reviews">
             <blockquote class="review">
                 <p class="review__text">Покупал iPhone 15 Pro Max в Apple Devices. Спасибо Ярославу за консультацию и помощь с выбором.
@@ -100,13 +101,13 @@
             </blockquote>
         </section>
 
-        <aside class="main__block__text">
-            Вы также можете оставить свой отзыв после покупки на нашем <a class="main__block__link" href="https://avito.ru">Avito</a>, спасибо за обратную связь!
+        <aside class="block__text">
+            Вы также можете оставить свой отзыв после покупки на нашем <a class="block__link" href="https://avito.ru">Avito</a>, спасибо за обратную связь!
         </aside>
     </section>
     <section class="main__block">
-        <h4 class="main__block__title">Бонус для внимательных</h4>
-        <article class="main__block__text">Для особо внимательных клиентов, дарим промокод <span><em><strong>Frontend</strong></em></span>, который даст вам скидку 1000 руб. при покупке телефона</article>
+        <h4 class="block__title">Бонус для внимательных</h4>
+        <article class="block__text">Для особо внимательных клиентов, дарим промокод <span><em><strong>Frontend</strong></em></span>, который даст вам скидку 1000 руб. при покупке телефона</article>
     </section>
 </main>
 <footer><h5 class="footer__text">ИП Демидович Т. А. ОРГНИП 324665800153826</h5></footer>
