--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Apple Devices, техника Apple, Авито Айфоны">
     <title>Apple Devices</title>
+    <script src="scripts/menu.js" defer></script>
+    <script src="scripts/loadtime.js" async></script>
     <link rel="stylesheet" href="css/outlines.css">
 </head>
 <body>
@@ -13,101 +15,27 @@
     <div class="header__container">
         <nav class="header__nav">
             <ul class="header__list">
-                <li class="header__item">Кто мы такие</li>
-                <li class="header__item">Наши преимущества</li>
-                <li class="header__item">Контакты</li>
-                <li class="header__item">Отзывы покупателей</li>
+                <li class="header__item"><a href="catalog.html">Каталог Товаров</a></li>
+                <li class="header__item"><a href="contacts.html">Контакты</a></li>
+                <li class="header__item"><a href="reviews.html">Отзывы Покупателей</a></li>
+                <li class="header__item"><a href="waitlist.html">Лист ожидания</a></li>
             </ul>
         </nav>
-        <h1 class="header__title">Apple Devices</h1>
+        <h1 class="header__title"><a href="index.html">Apple Devices</a></h1>
     </div>
 </header>
 <main>
     <section class="main__block">
-        <h2 class="block__title">Кто мы такие?</h2>
+        <h2 class="block__title">Самые низкие цены в России</h2>
         <p class="block__text">Apple Devices - это магазин техники Apple, предоставляющий премиальное обслуживание клиентов, оставляя при этом самую низкиую цену на рынке.</p>
     </section>
     <section class="main__block">
-        <h2 class="block__title">Наши преимущества</h2>
-        <ol class="block__list">
-            <li class="block__item">Низкие цены</li>
-            <li class="block__item">Гарантия на все устройства</li>
-            <li class="block__item"> Гибкие условия оплаты
-                <ul class="block__list">
-                    <li class="block__item">Кредит / Рассрочка</li>
-                    <li class="block__item">Trade-In</li>
-                </ul>
-            </li>
-        </ol>
+        <h2 class="block__title">Популярное</h2>
+        <p class="block__text">Apple Devices - это магазин техники Apple, предоставляющий премиальное обслуживание клиентов, оставляя при этом самую низкиую цену на рынке.</p>
     </section>
     <section class="main__block">
-        <h2 class="block__title">Наличие Товаров</h2>
-        <div class="table-container">
-            <div class="table">
-                <div class="table__row table__header">
-                    <div class="table__cell">Модель</div>
-                    <div class="table__cell">Цвет и Память</div>
-                    <div class="table__cell">Цена</div>
-                </div>
-                <div class="table__row">
-                    <div class="table__cell">iPhone 15</div>
-                    <div class="table__cell">Black 256GB</div>
-                    <div class="table__cell">79 990 руб.</div>
-                </div>
-                <div class="table__row">
-                    <div class="table__cell">iPhone 15 Pro</div>
-                    <div class="table__cell">Natural Titanium 1TB</div>
-                    <div class="table__cell">169 990 руб.</div>
-                </div>
-                <div class="table__row">
-                    <div class="table__cell">iPhone 15 Pro Max</div>
-                    <div class="table__cell">White Titanium 512GB</div>
-                    <div class="table__cell">129 990 руб.</div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="main__block">
-        <h2 class="block__title">Контакты</h2>
-        <h3 class="block__city">г. Екатеринбург</h3>
-        <ol class="block__list">
-            <li class="block__item"><strong>Адрес Офиса:</strong> г. Екатеринбург, ул. Народной Воли 62Б, 2 этаж, офис 209</li>
-            <li class="block__item"><strong>Контакт Telegram:</strong> <a class="block__link" href="https://t.me/appledevicesEkb">@appledevicesEkb</a></li>
-            <li class="block__item"><strong>Номер телефона:</strong> +79126621411</li>
-        </ol>
-        <img class="block__img"  src="/images/AD_ekb.jpg" alt="Фото офиса в Екатеринбурге">
-        <h3 class="block__city">г. Пермь</h3>
-        <ol class="block__list">
-            <li class="block__item"><strong>Адрес Офиса:</strong> г. Пермь, ул. Пермская 33, БЦ "Барвиха", 2 этаж, офис 202.4</li>
-            <li class="block__item"><strong>Контакт Telegram:</strong> <a class="block__link" href="https://t.me/appledevicesPerm">@appledevicesPerm</a></li>
-            <li class="block__item"><strong>Номер телефона:</strong> +79125521431</li>
-        </ol>
-        <img class="block__img" src="/images/AD_perm.jpg" alt="Фото офиса в Перми">
-    </section>
-    <section class="main__block">
-        <h2 class="block__title">Отзывы покупателей</h2>
-        <section class="reviews">
-            <blockquote class="review">
-                <p class="review__text">Покупал iPhone 15 Pro Max в Apple Devices. Спасибо Ярославу за консультацию и помощь с выбором.
-                    <br>Заодно сдал свой старый iPhone 13 в трейд-ин и получил хорошую скидку на новое устройство. Жене телефон
-                    буду покупать тут)</p>
-                <footer class="review__author">— Александр Марков</footer>
-            </blockquote>
-            <blockquote class="review">
-                <p class="review__text">Заехал к пацанятам взять рабочий сотик в командировку, ну чтобы с кайфом было, а не хухры мухры.
-                    <br>Сеня реально наш пермский слон, помог выбрать мобилу понтовую и чехол в подарок дал блатненый. От души, братва</p>
-                <footer class="review__author">— Сергей Оборин</footer>
-            </blockquote>
-        </section>
-
-        <aside class="block__text">
-            Вы также можете оставить свой отзыв после покупки на нашем <a class="block__link" href="https://avito.ru">Avito</a>, спасибо за обратную связь!
-        </aside>
-    </section>
-    <section class="main__block">
-        <h4 class="block__title">Бонус для внимательных</h4>
-        <article class="block__text">Для особо внимательных клиентов, дарим промокод <span><em><strong>Frontend</strong></em></span>, который даст вам скидку 1000 руб. при покупке телефона</article>
+        <h2 class="block__title">Новости</h2>
+        <p class="block__text">Apple Devices - это магазин техники Apple, предоставляющий премиальное обслуживание клиентов, оставляя при этом самую низкиую цену на рынке.</p>
     </section>
 </main>
 <footer><h5 class="footer__text">ИП Демидович Т. А. ОРГНИП 324665800153826</h5></footer>
